# sep_backend

./: .dockerignore  .env_example  .gitignore  Dockerfile  Makefile  Readme.md  entrypoint.sh  pyproject.toml
.github/workflows/: test_application.yaml
core/api/: filters.py  schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/news/: urls.py
core/api/v1/news/user/: handlers.py  schemas.py  urls.py
core/apps/common/: exceptions.py  factory.py  models.py
core/apps/common/auth/: auth_check.py  bearer.py  ninja_auth.py  password.py  token.py
core/apps/common/auth/validators/: email.py  exceptions.py  password.py
core/apps/news/: admin.py
core/apps/news/entities/: comment.py  faculty.py  news.py  subscription.py  tag.py  token.py  user.py
core/apps/news/exceptions/: auth.py  user.py
core/apps/news/migrations/: 0001_initial.py  0002_alter_user_score.py
core/apps/news/models/: __init__.py  comment.py  faculty.py  news.py  subscription.py  tag.py  user.py
core/apps/news/services/: user.py
core/apps/news/usecases/user/: create.py  get_info.py  login.py  logout.py  update_access_token.py  update_credentials.py  update_email.py  update_password.py  update_score.py
core/project/: asgi.py  settings.py  urls.py  wsgi.py
core/project/containers/: client.py  containers.py
core/project/containers/validators/: __init__.py  email.py  password.py
news_docker_compose/: app.yaml  storages.yaml
test/: conftest.py
test/app/client/: conftest.py
test/app/client/services/: test_client_service.py
test/factories/client/: client.py  role.py
(+2 files in other folders)
